Opened 11 years ago

Closed 10 years ago

#9969 closed bug (fixed)

[Expander] doesn't work inside a folder with two backslashes

Reported by: diver Owned by: korli
Priority: normal Milestone: R1
Component: Applications/Expander Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Neither Show contents nor expanding work if an archive is inside of a folder which has 2 backslashes in its name. unzip -l has no problems listing archive content from the same folder.

Change History (3)

comment:1 by pulkomandy, 10 years ago

Hi, Can you provide a test file?

comment:2 by diver, 10 years ago

Create a folder using Tracker and rename it to \\. Copy a zip or hpkg file there and open it in Expander.

comment:3 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev48435.

Note: See TracTickets for help on using tickets.