Expander: escape backslashes in path.

Fixes #9969.